--- a/changelog.txt
+++ b/changelog.txt
@@ -7,13 +7,17 @@ All notable changes to "Oblique Strategies" will be documented in this file.
 
 ## [Unreleased]
 
-## [0.3.1] - TBC
+## [0.4.1] - TBC
 ### Added
 - Full script.js with strategies in Spanish.
 
-## [0.2.1] - TBC
-### Changed
+## [0.3.1] - TBC
+### Added
 - Full script.js with strategies in English.
+
+## [0.2.1] - 2020-05-01
+### Changed
+- Expansion of the sample of strategies (n = 20).
 
 ## [0.2.0] - 2020-04-30
 ### Added
