--- a/changelog.txt
+++ b/changelog.txt
@@ -14,11 +14,14 @@ All notable changes to "Oblique Strategies" will be documented in this file.
 ## [0.3.1] - TBC
 ### Added
 - Full script.js with strategies in English.
+### Changed
+- Adjust of typography.
 
 ## [0.2.1] - 2020-05-01
 ### Changed
 - Expansion of the sample of strategies (n = 30).
 - GitHub corner URL.
+- Adjust of the load quote button.
 
 ## [0.2.0] - 2020-04-30
 ### Added
