--- a/changelog.txt
+++ b/changelog.txt
@@ -1,25 +1,27 @@
 # Changelog
 All notable changes to "Oblique Strategies" will be documented in this file.
 
-## [Released]
-
-## [1.0.0] - TBC
-
 ## [Unreleased]
 
-## [0.4.1] - TBC
+## [2.0.0] - TBC
 ### Added
 - Full script.js with strategies in Spanish.
 
-## [0.3.2] - 2020-06-02
-### Changed
-- Minor typesetting corrections in the changelog.
-
-## [0.3.1] - TBC
+## [1.0.0] - TBC
 ### Added
 - Full script.js with strategies in English.
 ### Changed
 - Adjust of typography.
+
+## [Released]
+
+## [0.2.3] - 2020-06-16
+### Changed
+- Revision of upgrade versioning.
+
+## [0.2.2] - 2020-06-02
+### Changed
+- Minor typesetting corrections in the changelog.
 
 ## [0.2.1] - 2020-05-01
 ### Changed
